--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Maitea design</title>
-	<meta name="description" content="Kite Coming Soon HTML Template by Jewel Theme" >
+	<meta name="description" content="Maitea coming soon" >
 	<meta name="author" content="Jewel Theme">
 
 	<!-- Mobile Specific Meta -->
