--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
 	<footer id="footer-section">
 		<p class="copyright">
 			<a href="http://instagram.com/maitea83"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
-			<a href="https://es.linkedin.com/in/maite-antolin-ayuso-811802124"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
+			<a href="https://twitter.com/maitea83"><i class="fa fa-twitter fa-3x" aria-hidden="true"></i></a>
+			<a href="https://es.linkedin.com/in/maite-antolin-ayuso-811802124"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a>
 		</p>
 	</footer>
 	<!-- Footer Section End -->
